turing-talos/apps/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - secretName: keycloak-cert
    hosts:
    - &host keycloak.jern.fi
  rules:
  - host: *host
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              name: https
        path: /
        pathType: Prefix
